<resources>
    <string name="app_name">MapsProffstore</string>
    <string name="maps_api_key">AIzaSyCwO97GZx0JJdJfFk0PSoB081HaKEhlNF4</string>

    <string name="object">Объект:</string>
    <string name="start_show">Показать с:</string>
    <string name="end_show">Показать по:</string>
    <string name="distance">Пробег:</string>
    <string name="display_mode">Режим отображения</string>
    <string name="show">Показать</string>
    <string name="cancel">Отменить</string>
    <string name="show_points">Отобразить объекты</string>
    <string name="show_routes">Отобразить маршруты</string>
    <string name="point_item">Объекты</string>
    <string name="route_item">Маршруты</string>
    <string name="lang_item">Язык</string>
    <string name="earth_item">Спутник</string>
    <string name="folk_item">Народная</string>
    <string name="hybrid_item">Гибрид</string>
    <string name="map_item">Карта</string>
    <string name="exit_item">Выход</string>

    <string name="rus">Русский</string>
    <string name="ukr">Украинский</string>
    <string name="apply">Применить</string>
    <string name="app_lang">Язык приложения</string>

    <string name="name_kt">Название контрольной точки</string>
    <string name="radius_kt">Радиус контрольной точки (м)</string>
    <string name="edit_field">Заполните все поля!</string>


    <string name="attention_point">Внимание! Точка:</string>
    <string name="control_entry">вошла в зону:</string>
    <string name="control_exit">покинула зону:</string>

    <string name="start_route">Начало маршрута!</string>
    <string name="end_route">Конец маршрута!</string>
    <string name="error_point">Выберите точку!</string>


    <string name="settings_cp">Параметры контрольной точки</string>
    <string name="set_cp">Изменить контрольную точку</string>
    <string name="add_cp">Создать новую контрольную точку</string>
    <string name="yandex_map">Yandex карта</string>
    <string name="google_map">Google карта</string>


    <string name="auth">Авторизация</string>
    <string name="auth_button">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="error_auth">При авторизации возникла ошибка!</string>



    <string-array name="map_types">
        <item>Карта</item>
        <item>Спутник</item>
        <item>Гибрид</item>
    </string-array>
</resources>
